--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
