--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.1.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "intl": "^1.2.5",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
